--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
